# djangoREST

./: README.md  manage.py  pyproject.toml
p7_extendUser/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
